<resources>
    <string name="app_name">ABC V4.8</string>
    <string name="loading">Loading</string>
    <string name="button_ok">OK</string>
    <string name="internet_connection_failed">Internet connection failed</string>
    <string name="server_ip">Server IP</string>
    <string name="server_port">Server Port</string>
    <string name="server_username">Server Username</string>
    <string name="server_password">Server Password</string>
    <string name="defaut_schema">Default schema</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="succ_config_set">The server config is set successfully</string>
    <string name="succ_config_edit">The server config is edited successfully</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_server_ip">Enter Server IP</string>
    <string name="enter_server_port">Enter Server Port</string>
    <string name="enter_server_username">Enter Server Username</string>
    <string name="enter_server_password">Enter Server password</string>
    <string name="enter_default_schema">Enter Default Schema</string>
    <string name="enter_web_ip">Enter Web IP</string>
    <string name="enter_web_port">Enter Web Port</string>
    <string name="invalied_user_pass">Invalid username or password</string>
    <string name="account_locked">USER ACCOUNT IS LOCKED CAN\'T LOGIN</string>
    <string name="pass_expired">USER PASSWORD EXPIRED CAN\'T LOGIN</string>
    <string name="hello">Hello</string>
    <string name="error_usrname">Enter Username</string>
    <string name="error_pass">Enter Password</string>
    <string name="set_config">You must set server config</string>
    <string name="error_req">Some thing error</string>
    <string name="products">products</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="pid">Product ID</string>
    <string name="sid">Stock ID</string>
    <string name="expiry">Expiry</string>
    <string name="batch_no">Batch No</string>
    <string name="sale_price">Sale price</string>
    <string name="uinpacks">Units in pack</string>
    <string name="add_product">Add PRODUCT</string>
    <string name="packs_no">Packs Qty</string>
    <string name="uinpacks_qnt">Units Qty</string>
    <string name="packs_no_">Packs Qty</string>
    <string name="uinpacks_qnt_">Units Qty</string>
    <string name="product_added_scucc">Product is added successfully</string>
    <string name="error_add_product">Error occurred during adding product</string>
    <string name="search_products">Search products</string>
    <string name="error_edit_inv">Error during edit inventory!</string>
    <string name="error_delete_inv">Error during delete inventory!</string>
    <string name="succ_edit_inv">Inventory is edited successfully</string>
    <string name="succ_delete_inv">Inventory is deleted successfully</string>
    <string name="delete_inv">Delete inventory</string>
    <string name="sure_delete_inv">Are you sure to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="branches">Branches</string>
    <string name="logout">Logout</string>
    <string name="enter_packs_qn">Enter packs qn.</string>
    <string name="no_results">No results found</string>
    <string name="db_config">Database Configuration</string>
    <string name="webconfig">Web Configuration</string>
    <string name="web_ip">Web IP</string>
    <string name="web_port">Web Port</string>
    <string name="no_packs_or_units">No packs or units are selected</string>
    <string name="update_exist_inv_title">Update existing inventory</string>
    <string name="update_exist_inv_body1">The product has been inventoryed before with</string>
    <string name="update_exist_inv_body2">Do you want to update it ?</string>
    <string name="packs">Packs</string>
    <string name="units">Units</string>
    <string name="vat">VAT</string>
    <string name="device_not_registered">Device Not Registered</string>
    <string name="dev_is_locked">Device Is Locked</string>
    <string name="period_finished">Device Registration Period Expired</string>
    <string name="device_id">Device ID :</string>
    <string name="device_name">Device Name :</string>
    <string name="add_device">Add Device</string>
    <string name="enter_device_name">Enter Device Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_pass">Enter Password</string>
    <string name="succ_add_device">Your device is added successfully</string>
    <string name="device_is_already_added">Your device is already added</string>
    <string name="auto_scan">Auto Scan Mode</string>
    <string name="branches_only">Branch Only</string>
    <string name="inv_check">Inventory check</string>
    <string name="relocate_check">Relocate check</string>
    <string name="transfer_delivery">Transfer delivery</string>
    <string name="sales_order_check">Sales order check</string>
    <string name="sales_invoice_delivery">Sales invoice delivery</string>
    <string name="customer_receipts">Customer receipts</string>
    <string name="reports">Reports</string>
    <string name="user_privilige_enough">User doesn\'t have enough privilege to access</string>
    <string name="customer_id">Customer id</string>
    <string name="items">Items</string>
    <string name="search_by">Search </string>
    <string name="by_stock">By stock</string>
    <string name="by_product">By product</string>
    <string name="no_items_to_check">No items to check</string>
    <string name="count_mode">Count mode</string>
    <string name="qua_mode">Quantity mode</string>
    <string name="choose_product">Please choose a product</string>
    <string name="no_orders">No orders</string>
    <string name="truee">True</string>
    <string name="falsee">False</string>
    <string name="check">Check</string>
    <string name="succ_check">Successfully check</string>
    <string name="not_all_checked">Not all products are checked!</string>
    <string name="customer_name">Customer name</string>
    <string name="Batch_no">Batch number</string>
    <string name="transfer_id">Transfer id</string>
    <string name="dest_branch">Dest branch</string>
    <string name="dest_id">Dest id</string>
    <string name="max_qnt">You can\'t add this item because you reached maximum number of packs</string>
    <string name="product_gtin">Products GTIN</string>
    <string name="no_products">No products</string>
    <string name="product_id">Product id</string>
    <string name="gtin">GTIN</string>
    <string name="press_search">Write on search box to find the products</string>
    <string name="invailed_gtin">Invalid GTIN</string>
    <string name="gtin_update_failed">GTIN updated failed</string>
    <string name="sql_error">SQL error</string>
    <string name="connection_error">Connection error</string>
    <string name="gtin_updated_suc">GTIN updated Successfully</string>
    <string name="search">Search</string>
    <string name="check_purchase">Purchase check</string>
    <string name="supplier_id_title">Supplier ID</string>
    <string name="purchase_invoice_no_title">Purchase Invoice No</string>
    <string name="poid">POID</string>
    <string name="enter">Enter</string>
    <string name="enter_supplier_id">Enter Supplier ID</string>
    <string name="enter_purchase_invoice_no">Enter Purchase Invoice No</string>
    <string name="enter_poid">Enter POID</string>
    <string name="enter_invoice_data">Enter Invoice Data</string>
    <string name="enter_inv_num">Enter Invoice number</string>
    <string name="enter_inv_data_scanner">Enter invoice data to open the scanner</string>
    <string name="select_list_scanner">Select a list to open the scanner</string>
    <string name="scanner_result">Scanner result</string>
    <string name="result">Result:</string>
    <string name="add">Add</string>
    <string name="suc_add_item">Successfully item added</string>
    <string name="failed_add_data">Failed to add this data</string>
    <string name="print_barcode">Print Barcode</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="suc_enter_qnt">Successfully Entered a quantity</string>
    <string name="suc_edited_qnt">Successfully Edited a quantity</string>
    <string name="enter_qn">Enter Quantity</string>
    <string name="edit">Edit</string>
    <string name="failed_con_api">Failed to connect to api</string>
    <string name="cannot_find_api">Can\'t find Api</string>
    <string name="pname">Product Name</string>
    <string name="serial">Serial Number</string>
    <string name="enter_expiry">Enter Expiry Date !</string>
    <string name="enter_batchno">Enter Batch Number !</string>
    <string name="enter_quantity">Enter the quantity !</string>
    <string name="invalid_api_config">Invalid Web API Configuration</string>
    <string name="search_results">Search results :</string>
    <string name="days">Day</string>
    <string name="months">Month</string>
    <string name="years">Year</string>
    <string name="enter_days">Enter the day</string>
    <string name="enter_months">Enter the month</string>
    <string name="enter_years">Enter the year</string>
    <string name="enter_valid_year">Enter valid year</string>
    <string name="enter_valid_date">Enter valid date</string>
    <string name="purchase_order_check">Purchase order check</string>
    <string name="dtts_scan">DTTS Scan</string>
    <string name="succ_add_item">Successfully added item</string>
    <string name="succ_delete_item">Successfully Deleted item</string>
    <string name="dtts">DTTS Dispatch Transfer</string>
    <string name="cannot_open_dtts">Can\'t open DTTStransfer</string>
    <string name="sure_delete_item">Are you sure to delete this item</string>
    <string name="no_items">No items</string>
    <string name="sure">Make sure</string>
    <string name="sure_add_prod_unit0_packs1">Are you sure to add this product with (units qnt : 0 and packs qnt : 1) ?</string>
    <string name="add_exist_prod_count_mode">Are you sure to add (units qnt : 0 and packs qnt : 1) to this already exist product ?</string>
    <string name="choose_branch">You have to choose a branch firstly</string>
    <string name="err_enter_qnt">You must enter a quantity!</string>
    <string name="num_dtts_scan_item_added">Number of the items added :</string>
    <string name="choose_dtts_list">-- Choose a list --</string>
    <string name="choose_list_type">-- Choose list type --</string>
    <string name="select_list_type">Select list type</string>
    <string name="list_ref">List Ref</string>
    <string name="add_list">Add List</string>
    <string name="enter_dtts_list_ref">Enter list ref</string>
    <string name="choose_dtts_list_type">You must choose a type</string>
    <string name="succ_add_dtts_list">The list is added successfully</string>
    <string name="succ_add_dtts_item">The item is added successfully</string>
    <string name="no_dtts_lists">No Lists</string>
    <string name="no_list_types">No List Types</string>
    <string name="close">Close</string>

</resources>
