<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/branch_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:textSize="@dimen/_20sdp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/inv_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight=".5"
            android:background="@drawable/white_solid_prim_stroke">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/inv_check"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/relocate_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight=".5"
            android:background="@drawable/white_solid_prim_stroke"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/relocate_check"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/transfer_delivery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight=".5"
            android:background="@drawable/white_solid_prim_stroke">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/transfer_delivery"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sales_order_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight=".5"
            android:background="@drawable/white_solid_prim_stroke"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/sales_order_check"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/sales_invoice_delivery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight=".5"
            android:background="@drawable/white_solid_prim_stroke">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/sales_invoice_delivery"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/customer_receipts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight=".5"
            android:background="@drawable/white_solid_prim_stroke"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/customer_receipts"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/reports"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight=".5"
            android:background="@drawable/white_solid_prim_stroke">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="2"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/reports"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/products_gtin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight=".5"
            android:background="@drawable/white_solid_prim_stroke"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/product_gtin"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>