<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_back"
            android:layout_margin="@dimen/_10sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_small_logo"
            android:layout_centerInParent="true"/>


        <TextView
            android:id="@+id/check_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/check"
            android:textColor="@color/colorPrimary"
            android:layout_margin="@dimen/_10sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_by"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"/>

                <RadioGroup
                    android:id="@+id/search_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@id/searc_by_stock">

                <RadioButton
                 android:id="@+id/searc_by_stock"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                 android:text="@string/by_stock"
                 android:textColor="@color/colorPrimary"
                 android:buttonTint="@color/colorPrimary"/>

                <RadioButton
                 android:id="@+id/searc_by_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                 android:text="@string/by_product"
                 android:textColor="@color/colorPrimary"
                android:buttonTint="@color/colorPrimary"/>

        </RadioGroup>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <Switch
                android:id="@+id/count_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_mode"
                android:textSize="@dimen/_12sdp"
                android:layout_margin="@dimen/_10sdp"
                android:switchPadding="@dimen/_10sdp"
                android:thumbTint="@color/like_icon_activated"/>

            <TextView
                android:id="@+id/switch_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/secondary_light"
                android:text="@string/falsee"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/white_solid_gray_stroke2"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/name_serach"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textSize="@dimen/_15sdp"
                android:background="@color/transparent"
                android:padding="@dimen/_10sdp"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:hint="@string/enter_product_name"/>


            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_search"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"/>

        </LinearLayout>

            <CheckBox
                android:id="@+id/auto_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_scan"
                android:buttonTint="@color/colorPrimary"
                android:layout_margin="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp" />

        <LinearLayout
            android:id="@+id/scan_barcode"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/prim_solid"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_barcode"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_margin="@dimen/_10sdp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_scanner" />
        </LinearLayout>



    </LinearLayout>

    <com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:theme="@style/MyAlertDialogStyle"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout>



</LinearLayout>