<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/device_id_title"
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:text="@string/device_id"/>

        <TextView
            android:id="@+id/device_id"
            android:layout_width="0dp"
            android:layout_weight=".75"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_13sdp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/device_name_title"
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:maxLines="1"
            android:text="@string/device_name"/>

        <EditText
            android:id="@+id/device_name"
            android:layout_width="0dp"
            android:layout_weight=".75"
            android:layout_height="40dp"
            android:layout_margin="@dimen/_10sdp"
            android:inputType="text"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/white_solid__accent_stroke"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/username_title"
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:maxLines="1"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_weight=".75"
            android:layout_height="40dp"
            android:layout_margin="@dimen/_10sdp"
            android:inputType="text"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/white_solid__accent_stroke"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/password_title"
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:maxLines="1"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_weight=".75"
            android:layout_height="40dp"
            android:layout_margin="@dimen/_10sdp"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/white_solid__accent_stroke"/>

    </LinearLayout>


    <Button
        android:id="@+id/add_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_device"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/prim_solid"/>

</LinearLayout>